[tool.poetry]
name = "songshgeo"
version = "0.1.0"
description = "A suite for personal academic life."
authors = ["SongshGeo <songshgeo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
